--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://schwabthedeck.github.io/random-workout-generator",
+  "homepage": "https://janeschwab.co/random-workout-generator",
   "name": "random-workout-generator",
   "version": "0.1.0",
   "private": true,
